[package]
name = "rc5_cypher"
version = "0.0.1"
authors = ["cyphersnake <cyphersnake@pm.me>"]
description = "The rc5_cypher crate provides an implementation of the RC5 encryption algorithm"
license = "MIT"
keywords = [ "rc5", "encryption", "cryptography", "cipher", "cypher", "rust-crypto", "rust-cryptography" ]
categories = ["cryptography"]
edition = "2021"

[features]
default = ["secrecy"]
secrecy = ["dep:secrecy"]

[[example]]
name = "cli"
required-features = ["secrecy"]

[dependencies]
byterepr = "0.1.0"
itertools = "0.10.5"
num-traits = "0.2.15"
secrecy = { version = "0.8.0", optional = true }

[dev-dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
log = "0.4.17"
simple_logger = "4.0.0"
